--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.4.0",
     "react-json-view": "^1.21.3",
+    "react-markdown": "^10.1.0",
     "react-phone-input-2": "^2.15.1",
     "react-range": "^1.10.0",
     "react-router-dom": "^7.0.2",
