--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@react-sigma/core": "^4.0.3",
     "@react-sigma/layout-circular": "^4.0.3",
     "@tanstack/react-table": "^8.20.6",
+    "@tiptap/react": "^3.14.0",
+    "@tiptap/starter-kit": "^3.14.0",
     "@types/chroma-js": "^2.4.5",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
