--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@azure/storage-blob": "^12.17.0",
+    "@floating-ui/dom": "^1.7.4",
     "@fontsource/inter": "^5.1.0",
     "@fontsource/rozha-one": "^5.1.0",
     "@hassanmojab/react-modern-calendar-datepicker": "^3.1.7",
