--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "graphology-layout": "^0.6.1",
     "graphology-layout-forceatlas2": "^0.10.1",
     "graphology-types": "^0.24.8",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.525.0",
     "radix-ui": "^1.4.2",
     "react": "^18.3.1",
