--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "yup": "^1.6.1"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.22.0",
     "@eslint/js": "^9.18.0",
     "@types/node": "^22.13.10",
     "@types/react": "^18.3.12",
